// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with props 1`] = `
<div
  className="ooyala-player"
  id="ooyala-player-2"
  style={
    Object {
      "color": "red",
    }
  }
/>
`;

exports[`styles has hidden styles 1`] = `
Object {
  "color": "red",
  "display": "none",
}
`;

exports[`styles has non hidden styles 1`] = `
Object {
  "color": "red",
}
`;
